feat: added about us page

--- a/src/templates/aboutus.html
+++ b/src/templates/aboutus.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <link rel="stylesheet" href="../static/aboutus_style.css">
 </head>
+
 <body>
-    
+    <div id="title">
+        <h1>About Us</h1>
+    </div>
+    <div class="box">
+        <img src="../static/assets/placeholder.png" alt="Picture of Max">
+        <div class="text">
+            <h2>[13522061] Maximilian Sulistiyo</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="../static/assets/placeholder.png" alt="Picture of Evelyn">
+        <div class="text">
+            <h2>[13522083] Evelyn Yosiana</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
+    <div class="box">
+        <img src="../static/assets/placeholder.png" alt="Picture of Andhika">
+        <div class="text">
+            <h2>[13522094] Andhika Tantyo Anugrah</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
 </body>
+
 </html>
