feat: added how to use page

--- a/src/templates/howtouse.html
+++ b/src/templates/howtouse.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>How To Use</title>
+    <link rel="stylesheet" href="../static/aboutus_style.css">
 </head>
+
 <body>
-    
+    <div id="title">
+        <h1>How To Use</h1>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>1. Clone the repo</h2>
+            <p>This can be done by opening up the terminal, change directory to the desired location, and type: <code>git clone git@github.com:riyorax/Algeo02-22061.git</code></p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>2. Navigate to the repo's source file directory</h2>
+            <p>Change directory to the cloned git repo by typing: <code>cd ./Algeo02-22061/src/</code></p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>3. Install the dependencies</h2>
+            <p>Change directory to the cloned git repo and type: <code>pip install -r requirements.txt</code> or <code>python3 -m pip install -r requirements.txt</code></p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>4. Run the website locally</h2>
+            <p>This is done by typing: <code>py app.py</code> or <code>python3 app.py</code></p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>5. Open the localhost website</h2>
+            <p>Look at the terminal output, see where the web is hosted at and <kbd>Crtl + click</kbd></p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>6. Click the toggle to switch between color or texture mode</h2>
+            <p>Just <kbd>click</kbd> it, as simple as that</p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>7. <i>Upload Image</i> section</h2>
+            <p>Just <kbd>click</kbd> <i>Choose File</i>, select <em>one</em> image</p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>8. <i>Upload Dataset</i> section</h2>
+            <p>Just <kbd>click</kbd> <i>Choose Files</i>, select one or more images or even folders</p>
+        </div>
+    </div>
+    <div class="box">
+        <div class="text">
+            <h2>9. Run it</h2>
+            <p><kbd>click</kbd> <i>Upload</i>, wait a few minutes or hopefully seconds <i>(depending on your CPU multicore performance)</i></p>
+            <p><small><small><del>pray that your potato CPU can handle texture mode</del></small></small></p>
+        </div>
+    </div>
 </body>
+
 </html>
