--- a/src/templates/result.html
+++ b/src/templates/result.html
@@ -33,6 +33,9 @@
             </div>
         </div>
         <div class="right">
+            <div class="runtime">
+                <p>{{ total_images }} Results {{ runtime }} seconds</p>
+            </div>
             <div class="item-box">
                 {% for item in data %}
                 <div class="item-image">
