--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -95,3 +95,23 @@ body {
     justify-content: center; 
     align-items: center;
 }
+
+
+input[type="file"] {
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.input[type="submit"]:hover {
+    background-color: #45a049;
+}
