--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -113,6 +113,7 @@ input[type="submit"] {
 
 .input[type="submit"]:hover {
     background-color: #45a049;
+}
 
 #loading {
     display: none;
@@ -158,4 +159,80 @@ input[type="submit"] {
     80%, 100% {
         content: '...';
     }
+}
+
+.side-div-top {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    margin-left: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.left-text, .right-text {
+    margin-right: 10px;
+}
+
+
+.toggle-container {
+    position: relative;
+    margin-right: 10px; 
+}
+
+
+.toggle-text {
+    display: flex;
+    align-items: center;
+}
+
+.left-text, .right-text {
+    margin-right: 10px;
+    padding-top: -10px;
+}
+
+.toggle-container {
+    position: relative;
+    width: 60px;
+    height: 34px;
+}
+
+.toggle-input {
+    display: none;
+}
+
+.toggle-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    border-radius: 34px;
+    transition: .4s;
+}
+
+.toggle-slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 50%;
+    transition: .4s;
+}
+
+.toggle-input:checked + .toggle-slider {
+    background-color: #333;
+}
+
+.toggle-input:focus + .toggle-slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+.toggle-input:checked + .toggle-slider:before {
+    transform: translateX(26px);
 }
