--- a/src/static/result_style.css
+++ b/src/static/result_style.css
@@ -100,6 +100,21 @@ input[type="file"] {
     margin-bottom: 10px;
 }
 
+input[type="button"] {
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.input[type="button"]:hover {
+    background-color: #45a049;
+}
+
 input[type="submit"] {
     margin: 10px;
     padding: 10px 20px;
